--- a/infra/Pulumi.zenml.yaml
+++ b/infra/Pulumi.zenml.yaml
@@ -1,1 +1,1 @@
-encryptionsalt: v1:JsWlnRZITo0=:v1:hnYomQxnj0L4OsJD:JO/EFnnWSxTEb6WrrYngL376VtXOmg==
+encryptionsalt: v1:+LqwDUaz/0w=:v1:Pzt7XkUFM6FYf1qU:5RNaH9nHrJXz9Vj2vBxROgyqExA0xg==
