--- a/pbd/pyproject.toml
+++ b/pbd/pyproject.toml
@@ -3,10 +3,12 @@ name = "pbd"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.9.11"
 dependencies = [
-    "beautifulsoup4>=4.13.3",
+    "boto3>=1.7.84",
+    "botocore>=1.10.84",
+    "github>=1.2.7",
     "kubernetes>=32.0.1",
-    "minio>=7.2.15",
-    "zenml==0.75.1",
+    "s3fs>=0.2.0",
+    "zenml==0.80.0",
 ]
