--- a/.github/workflows/docker_build_push.yaml
+++ b/.github/workflows/docker_build_push.yaml
@@ -20,19 +20,16 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Fetch all history for all branches and tags
+          fetch-depth: 0
 
       - name: Get Changed Folders
         id: filter
         run: |
-          # Check if manual folder is provided
           if [ -n "${{ inputs.folder }}" ]; then
             CHANGED='["${{ inputs.folder }}"]'
           elif [ $(git rev-list --count HEAD) -eq 1 ]; then
-            # If first commit, find all folders
             CHANGED=$(find pbd/pipelines -maxdepth 1 -mindepth 1 -type d -exec basename {} \; | jq -R -s -c 'split("\n")[:-1]')
           else
-            # Otherwise, use git diff to find changed folders
             CHANGED=$(git diff --name-only HEAD^ HEAD | grep '^pbd/pipelines/' | cut -d '/' -f 3 | sort -u | jq -R -s -c 'split("\n")[:-1]')
           fi
           echo "folders=$CHANGED" >> $GITHUB_OUTPUT
@@ -54,6 +51,9 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |
-          IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/pbd-${{ matrix.folder }}:latest
+          # Convert repository name to lowercase
+          REPO_NAME=$(echo "${{ github.repository }}" | cut -d'/' -f2 | tr '[:upper:]' '[:lower:]')
+          
+          IMAGE_NAME=ghcr.io/$REPO_NAME/pbd-${{ matrix.folder }}:latest
           docker build -t $IMAGE_NAME pbd/pipelines/${{ matrix.folder }}
           docker push $IMAGE_NAME
