--- a/pbd/pipelines/data_processing/Dockerfile
+++ b/pbd/pipelines/data_processing/Dockerfile
@@ -1,6 +1,7 @@
 # Stage 1: Build stage
 FROM python:3.9-slim AS build
 
+# Install uv
 RUN pip install uv
 
 # Set the working directory in the container
@@ -11,14 +12,17 @@ RUN apt-get update && apt-get install -y \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy only requirements first to leverage docker cache
+# Copy only project files first to leverage docker cache
 COPY pyproject.toml uv.lock ./
 
-# Install dependencies in the build container
-RUN pip install --no-cache-dir -r requirements.txt
+# Install dependencies using uv
+RUN uv pip install --system --no-cache
 
 # Stage 2: Final image
 FROM python:3.9-slim AS final
+
+# Install uv in final stage
+RUN pip install uv
 
 # Set the working directory in the container
 WORKDIR /app
