--- a/pbd/pipelines/data_processing/Dockerfile
+++ b/pbd/pipelines/data_processing/Dockerfile
@@ -1,8 +1,5 @@
 # Stage 1: Build stage
-FROM python:3.9-slim AS build
-
-# Install uv
-RUN pip install uv
+FROM python:3.12-slim AS build
 
 # Set the working directory in the container
 WORKDIR /app
@@ -12,17 +9,14 @@ RUN apt-get update && apt-get install -y \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy only project files first to leverage docker cache
-COPY pyproject.toml uv.lock ./
+# Copy only requirements first to leverage docker cache
+COPY requirements.txt .
 
-# Install dependencies using uv
-RUN uv pip install --system --no-cache
+# Install dependencies 
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Stage 2: Final image
-FROM python:3.9-slim AS final
-
-# Install uv in final stage
-RUN pip install uv
+FROM python:3.12-slim AS final
 
 # Set the working directory in the container
 WORKDIR /app
