--- a/.github/workflows/docker_build_push.yaml
+++ b/.github/workflows/docker_build_push.yaml
@@ -48,6 +48,12 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
       
+      - name: Prepare Lowercase Repository Name
+        id: repo-details
+        run: |
+          LOWERCASE_REPO_NAME=$(echo "${{ github.event.repository.name }}" | tr '[:upper:]' '[:lower:]')
+          echo "repo_name=$LOWERCASE_REPO_NAME" >> $GITHUB_OUTPUT
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       
@@ -63,18 +69,6 @@ jobs:
         with:
           context: pbd/pipelines/${{ matrix.folder }}
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/pbd-${{ matrix.folder }}:latest
+          tags: ghcr.io/${{ steps.repo-details.outputs.repo_name }}/pbd-${{ matrix.folder }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
-
-      - name: Lowercase Repository Owner
-        id: lowercase_repo_owner
-        run: |
-          LOWERCASE_REPO_OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
-          echo "repo_owner=$LOWERCASE_REPO_OWNER" >> $GITHUB_OUTPUT
-
-      - name: Retag and Push with Lowercase Owner
-        run: |
-          LOWERCASE_IMAGE_NAME=ghcr.io/${{ steps.lowercase_repo_owner.outputs.repo_owner }}/pbd-${{ matrix.folder }}:latest
-          docker tag ghcr.io/${{ github.repository_owner }}/pbd-${{ matrix.folder }}:latest $LOWERCASE_IMAGE_NAME
-          docker push $LOWERCASE_IMAGE_NAME
