--- a/pbd/pipelines/data_processing/pyproject.toml
+++ b/pbd/pipelines/data_processing/pyproject.toml
@@ -3,7 +3,7 @@ name = "data-processing"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.10.16,<3.11"
+requires-python = ">=3.12"
 dependencies = [
     "boto3>=1.37.18",
     "botocore>=1.37.18",
