--- a/pbd/pipelines/data_processing/pyproject.toml
+++ b/pbd/pipelines/data_processing/pyproject.toml
@@ -7,8 +7,9 @@ requires-python = ">=3.12"
 dependencies = [
     "boto3>=1.37.18",
     "botocore>=1.37.18",
+    "kubernetes>=32.0.1",
     "minio>=7.2.15",
-    "pdf2image>=1.17.0",
+    "pytubefix>=8.12.3",
     "s3fs>=0.4.2",
     "zenml==0.80.0",
 ]
