--- a/pbd/pipelines/data_processing/Dockerfile
+++ b/pbd/pipelines/data_processing/Dockerfile
@@ -17,7 +17,7 @@ WORKDIR /app
 # Copy the dependencies from the build stage
 COPY --from=build /usr/local/lib/python3.12/site-packages /usr/local/lib/python3.12/site-packages
 #COPY helper
-COPY ../../helper /app/helper
+COPY helper /app/helper
 # Copy the entire data_processing folder
 COPY . .
 # Optional: Set environment variables if needed
