--- a/pbd/pipelines/data_processing/Dockerfile
+++ b/pbd/pipelines/data_processing/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update && apt-get install -y \
  build-essential \
  && rm -rf /var/lib/apt/lists/*
 # Copy only requirements first to leverage docker cache
-COPY requirements.txt .
+COPY pipelines/data_processing/requirements.txt .
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 # Stage 2: Final image
