--- a/.github/workflows/mistral-rs-docker-build.yaml
+++ b/.github/workflows/mistral-rs-docker-build.yaml
@@ -46,7 +46,7 @@ jobs:
           file: ./Dockerfile.cuda.all
           push: true
           tags: |
-            ghcr.io/${{ steps.repo_owner.output.repo_owner }}/mistralrs:latest
-            ghcr.io/${{ steps.repo_owner.output.repo_owner }}/mistralrs:${{ github.sha }}
+            ghcr.io/${{ steps.repo_owner.outputs.repo_owner }}/mistralrs:latest
+            ghcr.io/${{ steps.repo_owner.outputs.repo_owner }}/mistralrs:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
