--- a/.github/workflows/mistral-rs-docker-build.yaml
+++ b/.github/workflows/mistral-rs-docker-build.yaml
@@ -43,7 +43,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: Dockerfile.cuda.all
+          file: Dockerfile.cuda-all
           push: true
           tags: ghcr.io/${{ steps.repo-owner.outputs.repo_owner }}/mistralrs:latest
           cache-from: type=gha
