--- a/infra/pyproject.toml
+++ b/infra/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "infisicalsdk>=1.0.6",
     "pulumi>=3.155.0",
     "pulumi-command>=1.0.2",
     "pulumi-kubernetes>=4.22.1",
