--- a/pbd/pipelines/data_extraction/Dockerfile
+++ b/pbd/pipelines/data_extraction/Dockerfile
@@ -1,36 +1,58 @@
-# Stage 1: Build stage
-FROM ghcr.io/atharva-phatak/mistralrs:latest AS build
+# Stage 1: Build dependencies with Python
+FROM nvidia/cuda:12.4.1-cudnn-runtime-ubuntu22.04 AS build
 
-# Install Python and dependencies
-RUN apt-get update && apt-get install -y \
-    python3-pip \
-    build-essential \
-    && rm -rf /var/lib/apt/lists/*
+# Install Python 3.12 and venv
+RUN apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y \
+        software-properties-common \
+        curl && \
+    add-apt-repository ppa:deadsnakes/ppa && \
+    apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y \
+        python3.12 \
+        python3.12-venv && \
+    curl -sS https://bootstrap.pypa.io/get-pip.py | python3.12 && \
+    ln -s /usr/bin/python3.12 /usr/bin/python && \
+    ln -s /usr/local/bin/pip /usr/bin/pip && \
+    rm -rf /var/lib/apt/lists/*
 
-# Copy only requirements first to leverage docker cache
-COPY pipelines/data_extraction/requirements.txt .
+# Create and activate virtualenv
+RUN python3.12 -m venv /venv
+ENV PATH="/venv/bin:$PATH"
 
-# Install dependencies
+# Copy requirements and install
+COPY pbd/pipelines/data_extraction/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Stage 2: Final image
-FROM ghcr.io/atharva-phatak/mistralrs:latest
+# Stage 2: Final runtime image
+FROM nvidia/cuda:12.4.1-cudnn-runtime-ubuntu22.04
 
-# Copy your application
-WORKDIR /app
 
-# Copy the dependencies from the build stage (the build stage is now named 'build')
-COPY --from=build /usr/local/lib/python3.12/site-packages /usr/local/lib/python3.12/site-packages
+# Install Python 3.12 again (needed to use the venv)
+RUN apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y \
+        software-properties-common \
+        curl && \
+    add-apt-repository ppa:deadsnakes/ppa && \
+    apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y \
+        python3.12 \
+        python3.12-venv && \
+    curl -sS https://bootstrap.pypa.io/get-pip.py | python3.12 && \
+    ln -s /usr/bin/python3.12 /usr/bin/python && \
+    ln -s /usr/local/bin/pip /usr/bin/pip && \
+    rm -rf /var/lib/apt/lists/*
+# Copy the virtualenv from build
+COPY --from=build /venv /venv
 
-# Copy helper and other necessary files
-COPY helper /app/pbd/helper
-COPY pipelines/data_extraction /app/pbd/pipelines/data_extraction
-
-# Optional: Set environment variables if needed
+# Set environment to use virtualenv Python and pip
+ENV PATH="/venv/bin:$PATH"
 ENV PYTHONUNBUFFERED=1
-
-# Set Python path
 ENV PYTHONPATH="/app"
 
-# Default command
+# Copy application code (uncomment if needed)
+WORKDIR /app
+# COPY helper /app/pbd/helper
+# COPY pipelines/data_extraction /app/pbd/pipelines/data_extraction
+
 CMD ["/bin/bash"]
