--- a/pbd/pipelines/data_extraction/pyproject.toml
+++ b/pbd/pipelines/data_extraction/pyproject.toml
@@ -5,12 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
- "boto3>=1.37.18",
- "botocore>=1.37.18",
- "kubernetes>=32.0.1",
- "minio>=7.2.15",
- "mistralrs>=0.5.0",
- "pytubefix>=8.12.3",
- "s3fs>=0.4.2",
- "zenml==0.80.0",
+    "boto3>=1.37.33",
+    "botocore>=1.37.33",
+    "ipython==8.35.0",
+    "kubernetes>=32.0.1",
+    "minio>=7.2.15",
+    "mistralrs>=0.5.0",
+    "s3fs>=0.4.2",
+    "zenml>=0.80.2",
 ]
