--- a/pbd/pipelines/data_extraction/pyproject.toml
+++ b/pbd/pipelines/data_extraction/pyproject.toml
@@ -14,3 +14,11 @@ dependencies = [
     "transformers>=4.51.3",
     "zenml>=0.80.2",
 ]
+[[tool.uv.index]]
+name = "pytorch-cu121"
+url = "https://download.pytorch.org/whl/cu121"
+explicit = true
+[tool.uv.sources]
+torch = [
+  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
+]
