--- a/pbd/pipelines/data_extraction/pyproject.toml
+++ b/pbd/pipelines/data_extraction/pyproject.toml
@@ -11,14 +11,15 @@ dependencies = [
     "kubernetes>=32.0.1",
     "minio>=7.2.15",
     "s3fs>=0.4.2",
+     "torch>=2.6.0",
     "transformers>=4.51.3",
     "zenml>=0.80.2",
 ]
-[[tool.uv.index]]
-name = "pytorch-cu121"
-url = "https://download.pytorch.org/whl/cu121"
-explicit = true
 [tool.uv.sources]
 torch = [
-  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
+    { index = "pytorch-cu124" },
 ]
+[[tool.uv.index]]
+name = "pytorch-cu124"
+url = "https://download.pytorch.org/whl/cu124"
+explicit = true
