--- a/pbd/pipelines/data_processing/pyproject.toml
+++ b/pbd/pipelines/data_processing/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "botocore>=1.37.18",
     "kubernetes>=32.0.1",
     "minio>=7.2.15",
-    "pytubefix>=8.12.3",
+    "pdf2image>=1.17.0",
     "s3fs>=0.4.2",
     "zenml==0.80.0",
 ]
