--- a/pbd/pipelines/fast_inference/config/config.yaml
+++ b/pbd/pipelines/fast_inference/config/config.yaml
@@ -3,22 +3,24 @@ pipeline:
   enable_cache: false
   settings:
     docker:
-      parent_image: "ghcr.io/atharva-phatak/pbd-data_processing:latest"
+      parent_image: "ghcr.io/atharva-phatak/pbd-fast_inference:latest"
       skip_build: true
     kubernetes_orchestrator:
       pod_settings:
         resources:
           requests:
             cpu: "4"
-            memory: "2Mi"
+            memory: "3Gi"
+            nvidia.com/gpu: "1"
           limits:
             cpu: "6"
-            memory: "3Gi"
+            memory: "4Gi"
+            nvidia.com/gpu: "1"
         env_from:
           - secretRef:
               name: "aws-credentials"
         labels:
-          app: "youtube-scraper-pipeline"
+          app: "ocr-pipeline"
           component: "step"
       orchestrator_pod_settings:
         resources:
@@ -39,8 +41,6 @@ pipeline:
     download_from_minio:
       parameters:
         endpoint: "minio-service:9000"
-        access_key: "minioadmin"
-        secret_key: "minioadmin"
         bucket: "images-bucket"
         object_key: "ocr/test.zip"
         local_path: "/tmp/images.zip"
@@ -52,8 +52,11 @@ pipeline:
     ocr_images:
       parameters:
         model_config:
-          path: "/models/idefics3.gguf"
+          tok_model_id="HuggingFaceTB/SmolVLM2-256M-Video-Instruct",
+          quantized_model_id="ggml-org/SmolVLM2-256M-Video-Instruct-GGUF",
+          quantized_filename="SmolVLM2-256M-Video-Instruct-Q8_0.gguf",
         generation_config:
           temperature: 0.7
+          top_p: 0.1
           max_tokens: 512
         prompt: "Describe this image in detail."
