--- a/infra/pyproject.toml
+++ b/infra/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "infisicalsdk>=1.0.6",
+    "omegaconf>=2.3.0",
     "pulumi>=3.155.0",
     "pulumi-command>=1.0.2",
     "pulumi-kubernetes>=4.22.1",
