--- a/pbd/pipelines/data_extraction/config/config.yaml
+++ b/pbd/pipelines/data_extraction/config/config.yaml
@@ -1,15 +1,15 @@
 name: ocr_pipeline
 enable_cache: False
-entable_step_logs: True
-
-endpoint: "fsml.minio.info"
-bucket: "data-bucket"
-object_key: "processed_data/dc_mechanics.zip"
-local_path: "/tmp/images.zip"
-extract_to: "/tmp/images"
-image_dir: "/tmp/images"
-model_path: "/models/Qwen2.5-VL-7B-Instruct-bnb-4bit/"
-max_new_tokens: 4096
-min_pixels: 512
-max_pixels: 512
+enable_step_logs: True
+args:
+  endpoint: "fsml.minio.info"
+  bucket: "data-bucket"
+  object_key: "processed_data/dc_mechanics.zip"
+  local_path: "/tmp/images.zip"
+  extract_to: "/tmp/images"
+  image_dir: "/tmp/images"
+  model_path: "/models/Qwen2.5-VL-7B-Instruct-bnb-4bit/"
+  max_new_tokens: 4096
+  min_pixels: 512
+  max_pixels: 512
 
