--- a/pbd/pipelines/data_extraction/pyproject.toml
+++ b/pbd/pipelines/data_extraction/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "accelerate>=1.7.0",
     "boto3>=1.37.33",
     "botocore>=1.37.33",
     "ipython==8.35.0",
